OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3+ (WordPress)

5.10.0-alpha1 (2020-05-11)
--------------------------
NOTE: The minimum PHP version requirement is now set to 5.6.

Features:
- Upgrade function to 5.10.0 checks strengthened Requirements.

Refactorings:
- Added some unit tests for basic classes in the Web namespace. As a consequence
  a lot of classes and methods were moved, renamed, or split:
- Renamed Web namespace to ApiClient.
- Renamed class Service to Acumulus and parameters/properties/variables for this
  type to acumulusApiClient.
- Split class Communicator into ApiCommunicator and HttpCommunicator. This gives
  us a better separation of concerns and testability as we can more easily mock
  http communication.
- Introduced an interface Helpers/Severity, defining constants for severity and
  log levels, replacing similar constants from both Helpers/Log and Web/Result.
- Introduced a Helpers/Message class that wraps a Message (internal message, API
  message, exception, success message, debug message). Extracted (more or less)
  from Web/Result, used by Helpers/MessageCollection, Web/Result, and,
  Helpers/Form and everywhere messages are shown, logged or mailed.
- Introduced a Helpers/MessageCollection class that wraps a set of Message
  objects (see above). Extracted from Web/Result, used by Web/Result and,
  Helpers/Form.
- Many methods or parameters of methods in Web/Result were renamed or have
  (subtly) changed their (default) behavior.
- Requirements regarding required php extensions are completed in both
  Helpers/Requirements and composer.json.

5.9.1 (2020-04-23) (never released)
-----------------------------------
Bugs:
- MA|WC: Filling in some lacking error handling on the invoice status screen.
- WC: Ensure that the rate plugin on one of our own form pages do not treat form